[gd_scene load_steps=11 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://13831_big.jpg" type="Texture" id=2]
[ext_resource path="res://BQvY5lNPUwQXqJon6cEKqRbn9NGx1lkQ35pO-1lHwtYy42pkR1TYWvD8opJnsDkwyMXmO3nlIgLsTwGOoE7aG9We.jpg" type="Texture" id=3]
[ext_resource path="res://Tile_Set_Ground_Extended+.tres" type="TileSet" id=4]
[ext_resource path="res://Game/tt.gd" type="Script" id=5]
[ext_resource path="res://3d37a52637314e3cabe02b2d26d77b0b.jpg" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 500.832, 213.268 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 164.25, 78 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 94.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35.2999, 56.9276 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 837.669, 775.268 )
scale = Vector2( 1.6, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D/CollisionShape2D"]
position = Vector2( -9.33339, -1.02448 )
scale = Vector2( 1.02283, 0.636413 )
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1756.25, 662 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="StaticBody2D/CollisionShape2D2"]
position = Vector2( -5.12497, -2.99999 )
scale = Vector2( 0.33425, 0.230885 )
texture = ExtResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2708.16, 795.408 )
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D/CollisionShape2D3"]
position = Vector2( 2.76175, -0.38519 )
scale = Vector2( 1.00823, 0.638665 )
texture = ExtResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2698, 792 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D/CollisionShape2D4"]
position = Vector2( -22.3117, -6.82812 )
scale = Vector2( 0.963546, 0.67439 )
texture = ExtResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -122, 299 )
rotation = 1.0472
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D/CollisionShape2D5"]
position = Vector2( 3.38574, -1.53096 )
scale = Vector2( 0.912151, 0.709335 )
texture = ExtResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3671, 437 )
rotation = 2.09439
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D/CollisionShape2D6"]
position = Vector2( 3.38574, -1.53096 )
scale = Vector2( 0.912151, 0.709335 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 132, -197 )
scale = Vector2( 4.4625, 3.3775 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="StaticBody2D"]
position = Vector2( 3699, -196 )
scale = Vector2( 4.4625, 3.3775 )
z_index = -1
texture = ExtResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 521, 467 )
shape = SubResource( 3 )

[node name="Position_Enemy" type="Position2D" parent="."]
position = Vector2( 1577, 1383 )

[node name="Position_Ally" type="Position2D" parent="."]
position = Vector2( 364, 307 )

[node name="Position_Heroe" type="Position2D" parent="."]
position = Vector2( 926, 1418 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 1572870, 2, 0, 1572871, 2, 0, 1572872, 2, 0, 1572873, 2, 0, 1572874, 2, 0, 1572875, 2, 0, 1572876, 2, 0, 1572877, 2, 0, 1572878, 2, 0, 1572879, 2, 0, 1572881, 2, 0, 1572882, 2, 0, 1572884, 2, 0, 1572885, 2, 0, 1572886, 2, 0, 1572888, 2, 0, 1572890, 2, 0, 1572891, 2, 0, 1572892, 2, 0, 1572893, 2, 0, 1572894, 2, 0, 1572895, 2, 0, 1572896, 2, 0, 1572897, 2, 0, 1572898, 2, 0, 1572899, 2, 0, 1572900, 2, 0, 1572901, 2, 0, 1572902, 2, 0, 1572903, 2, 0, 1572904, 2, 0 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 1212, 1808 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 61, 12 )
rotation = -3.13615
shape = SubResource( 4 )
one_way_collision_margin = 0.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 64, 41 )
rotation = -1.57879
shape = SubResource( 4 )
disabled = true
one_way_collision_margin = 128.0

[node name="ууу" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 14, 10 )
scale = Vector2( 0.102257, 0.11809 )
texture = ExtResource( 6 )
